# glauncher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/detours/: CMakeLists.txt
src/dll/: CMakeLists.txt  dllmain.cpp
src/launcher/: CMakeLists.txt  IConfig.h.in  main.cpp
